Changed carousel button colour

--- a/css/style.css
+++ b/css/style.css
@@ -8814,7 +8814,7 @@ h1, h2, h3, h4, h5,
     border-radius: 50%;
     background: rgba(0, 0, 0, 0.1); }
     .ftco-project .owl-dots .owl-dot.active {
-      background: #a0f669; }
+      background: #d6e079; }
 
 .staff {
   overflow: hidden;
